Update chatbot styling and fix scrollbar appearance #71

--- a/weather_app/frontend/static/css/main.css
+++ b/weather_app/frontend/static/css/main.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: #144283;
+    --primary: #144283;  /* #a60301 */
     --secondary: #37883e;
     --light: #fff;
     --dark: #000;
@@ -888,10 +888,6 @@ h6,
     margin-right: 0;
     padding-right: 0;
     border-right: none;
-}
-
-::-webkit-scrollbar-track {
-    background-color: var(--primary);
 }
 
 h1, h2, h3, h3, h5, h6 {
